welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:9: error: value ! is not a member of Int
	while (getY() ! = getMondeHauteur() - 1 && getX() ! = getMondeLargueur() - 1)
                      ^ColumnByColumn:25: error: not found: value getMondeLargueur
	setPos(getMondeLargueur - 1 , getMondeHauteur -1 )
               ^